--- a/src/Makefile
+++ b/src/Makefile
@@ -8,21 +8,21 @@ INC_DIR= ../inc/
 TARGET = msd_conf
 OBJECT = msd_conf.o msd_hash.o msd_string.o
 
-all: $(TARGET)
+all: $(TARGET) 
 
 #$(OBJECT): %:%.c $(INC_DIR)%.h
-#   $(CC) $(CFLAGS) $(INC) $< -o $@
+#	$(CC) $(CFLAGS) $(INC) $< -o $@
 
 $(OBJECT): %.o:%.c $(INC_DIR)%.h
-    $(CC) $(CFLAGS) $(INC) $< -c -o $@
+	$(CC) $(CFLAGS) $(INC) $< -c -o $@
 
-$(TARGET): $(OBJECT)
-    $(CC) $(CFLAGS) $(INC) $< -o $@
+$(TARGET):$(OBJECT)
+	$(CC) $(CFLAGS) $(INC) $(OBJECT) -o $@
 
 #deps
 msd_conf.o: msd_string.c msd_hash.c
 
 .PHONY :clean
 clean:
-    rm -f *.o
-    rm $(TARGET) 
+	rm -f *.o
+	rm $(TARGET) 
