--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,13 @@
-DEBUG  = -g -D__MSD_CONF_TEST_MAIN__
+DEBUG  = -g -D__MSD_LOCK_TEST_MAIN__
 CC     = gcc
 CFLAGS = $(DEBUG) -Wall
-LIB    = -ldl -rdynamic
+LIB    = -ldl -rdynamic -lpthread
 INC    = -I../inc
 INC_DIR= ../inc/
 
-TARGET = msd_conf
-OBJECT = msd_conf.o msd_hash.o msd_string.o
+TARGET = msd_lock
+OBJECT = msd_conf.o msd_hash.o msd_string.o msd_vector.o msd_dlist.o\
+		 msd_lock.o
 
 all: $(TARGET) 
 
@@ -17,7 +18,7 @@ $(OBJECT): %.o:%.c $(INC_DIR)%.h
 	$(CC) $(CFLAGS) $(INC) $< -c -o $@
 
 $(TARGET):$(OBJECT)
-	$(CC) $(CFLAGS) $(INC) $(OBJECT) -o $@
+	$(CC) $(CFLAGS) $(INC) $(LIB) $(OBJECT) -o $@
 	rm -f *.o
 
 #deps
