--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,15 @@
-DEBUG  = -g -D__MSD_LOCK_TEST_MAIN__
+#DEBUG  = -g -D__MSD_LOG_TEST_MAIN__
+DEBUG  = -g 
 CC     = gcc
 CFLAGS = $(DEBUG) -Wall
 LIB    = -ldl -rdynamic -lpthread
 INC    = -I../inc
 INC_DIR= ../inc/
 
-TARGET = msd_lock
+TARGET = mossad 
 OBJECT = msd_conf.o msd_hash.o msd_string.o msd_vector.o msd_dlist.o\
-		 msd_lock.o
+		 msd_lock.o msd_log.o msd_ae.o\
+		 mossad.o
 
 all: $(TARGET) 
 
@@ -24,7 +26,10 @@ $(TARGET):$(OBJECT)
 #deps
 msd_conf.o: msd_string.c msd_hash.c
 
-.PHONY :clean
+.PHONY :clean install
+install:
+	install $(TARGET) ../bin/
+	install mossad.conf ../bin/
 clean:
 	rm -f *.o
 	rm $(TARGET) 
