--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-#DEBUG  = -g -D__MSD_LOG_TEST_MAIN__
+#DEBUG  = -g -D__MSD_THREAD_TEST_MAIN__
 DEBUG  = -g 
 CC     = gcc
 CFLAGS = $(DEBUG) -Wall
@@ -8,7 +8,8 @@ INC_DIR= ../inc/
 
 TARGET = mossad 
 OBJECT = msd_conf.o msd_hash.o msd_string.o msd_vector.o msd_dlist.o\
-		 msd_lock.o msd_log.o msd_ae.o\
+		 msd_lock.o msd_log.o msd_ae.o msd_so.o msd_daemon.o msd_anet.o\
+		 msd_thread.o msd_master.o\
 		 mossad.o
 
 all: $(TARGET) 
@@ -22,14 +23,13 @@ $(OBJECT): %.o:%.c $(INC_DIR)%.h
 $(TARGET):$(OBJECT)
 	$(CC) $(CFLAGS) $(INC) $(LIB) $(OBJECT) -o $@
 	rm -f *.o
-
 #deps
 msd_conf.o: msd_string.c msd_hash.c
 
 .PHONY :clean install
 install:
 	install $(TARGET) ../bin/
-	install mossad.conf ../bin/
+	install mossad.conf.default ../bin/mossad.conf
 clean:
 	rm -f *.o
 	rm $(TARGET) 
