--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-#DEBUG  = -g -D__MSD_THREAD_TEST_MAIN__
+#DEBUG  = -g -D__MSD_STRING_TEST_MAIN__
 DEBUG  = -g 
 CC     = gcc
 CFLAGS = $(DEBUG) -Wall
@@ -7,6 +7,8 @@ INC    = -I../inc
 INC_DIR= ../inc/
 
 TARGET = mossad 
+#TARGET = msd_string 
+#OBJECT = msd_string.o
 OBJECT = msd_conf.o msd_hash.o msd_string.o msd_vector.o msd_dlist.o\
 		 msd_lock.o msd_log.o msd_ae.o msd_so.o msd_daemon.o msd_anet.o\
 		 msd_thread.o msd_master.o\
