--- a/demos/mongo-saver/mongo_saver.conf
+++ b/demos/mongo-saver/mongo_saver.conf
@@ -13,7 +13,7 @@ mongo_ip     127.0.0.1
 mongo_port   27017
 
 #mongo ¿âÃû³Æ
-mongo_db     sky-mirror
+mongo_db     test
 
 #mongo ±íÃû³Æ
-mongo_table   monitor_data
+mongo_table   test
