--- a/demos/redis-saver/redis_saver.conf
+++ b/demos/redis-saver/redis_saver.conf
@@ -1,19 +1,18 @@
 # .so configs
-so_file         ./libmongo_saver.so
-pro_name        Msd_mongo_saver
+so_file         ./libredis_saver.so
+pro_name        Msd_redis_saver
 
 
-#表结构：_id, hostname, item_id, time, value
-#
+#hash结构：hostname:{
+#             item_id => value,
+#             item_id => value
+#          }
 
-#mongo 地址
-mongo_ip     127.0.0.1
+#redis 地址
+redis_ip     127.0.0.1
 
-#monog 端口
-mongo_port   27017
+#redis 端口
+redis_port   6379
 
-#mongo 库名称
-mongo_db     xxx
-
-#mongo 表名称
-mongo_table   xx
+#redis 库名称
+redis_db     0
