--- a/demos/redis-saver/Makefile
+++ b/demos/redis-saver/Makefile
@@ -2,7 +2,9 @@ CC = gcc
 CFLAGS  = -fPIC -Wall -pipe -DDEBUG -g -D_GNU_SOURCE -D_REENTRANT
 LIB     = -ldl -lrt -lm -lcurl -rdynamic -lcJSON -L.
 INC     = -I../../inc -I../../lib/cJSON/
-REDIS   = $(shell /usr/bin/pkg-config --cflags --libs libredis)
+## export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/:$PKG_CONFIG_PATH
+## REDIS   = $(shell /usr/bin/pkg-config --cflags --libs hiredis)
+REDIS   = -I/usr/local/include/hiredis -L/usr/local/lib -lhiredis 
 
 OO  = redis_saver.o
 TARGETS = libredis_saver.so
