--- a/demos/redis-saver/Makefile
+++ b/demos/redis-saver/Makefile
@@ -2,6 +2,12 @@ CC = gcc
 CFLAGS  = -fPIC -Wall -pipe -DDEBUG -g -D_GNU_SOURCE -D_REENTRANT
 LIB     = -ldl -lrt -lm -lcurl -rdynamic -lcJSON -L../../lib/cJSON/
 INC     = -I../../inc -I../../lib/cJSON/
+
+# vim /etc/ld.so.conf
+# add /usr/local/lib
+# ldconfig
+
+
 ## export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/:$PKG_CONFIG_PATH
 ## REDIS   = $(shell /usr/bin/pkg-config --cflags --libs hiredis)
 REDIS   = -I/usr/local/include/hiredis -L/usr/local/lib -lhiredis 
