--- a/demos/redis-saver/Makefile
+++ b/demos/redis-saver/Makefile
@@ -1,8 +1,13 @@
 CC = gcc
-CFLAGS  = -fPIC -Wall -pipe -DDEBUG -g -D_GNU_SOURCE -D_REENTRANT
+
+# 锁模式：
+# 线程mutex(默认) | SYSVSEM | 文件锁 
+# [__MSD_PTHREAD_LOCK_MODE__ / __MSD_SYSVSEM_LOCK_MODE__ / __MSD_FCNTL_LOCK_MODE__]
+LOCK_MODE = -D__MSD_PTHREAD_LOCK_MODE__
+
+CFLAGS  = $(IO_MULTI_MODE) $(LOG_MODE) $(LOCK_MODE) -fPIC -Wall -pipe -DDEBUG -g -D_GNU_SOURCE -D_REENTRANT
 LIB     = -ldl -lrt -lm -lcurl -rdynamic -lcJSON -L../../lib/cJSON/
 INC     = -I../../inc -I../../lib/cJSON/
-
 
 ## export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/:$PKG_CONFIG_PATH
 ## REDIS   = $(shell /usr/bin/pkg-config --cflags --libs hiredis)
@@ -18,7 +23,7 @@ $(TARGETS): $(OO)
 
 install:
 	install $(TARGETS) ../../bin/redis_saver/
-	cp redis_saver.conf ../../bin/redis_saver/
+	#cp redis_saver.conf ../../bin/redis_saver/
 
 .c.o:
 	$(CC) $(REDIS) $(CFLAGS) $< -c -o $@ $(INC) 
