--- a/demos/passenger/Makefile
+++ b/demos/passenger/Makefile
@@ -1,4 +1,10 @@
 CC = gcc
+
+# 锁模式：
+# 线程mutex(默认) | SYSVSEM | 文件锁 
+# [__MSD_PTHREAD_LOCK_MODE__ / __MSD_SYSVSEM_LOCK_MODE__ / __MSD_FCNTL_LOCK_MODE__]
+LOCK_MODE = -D__MSD_PTHREAD_LOCK_MODE__
+
 CFLAGS  = -fPIC -Wall -pipe -DDEBUG -g -D_GNU_SOURCE -D_REENTRANT
 LIB     = -ldl -lrt -rdynamic
 INC     = -I../../inc
