--- a/cases/mongo-saver/mongo_saver.conf
+++ b/cases/mongo-saver/mongo_saver.conf
@@ -7,13 +7,13 @@ pro_name        Msd_mongo_saver
 #
 
 #mongo 地址
-mongo_ip     127.0.0.1
+mongo_ip     10.16.26.244
 
-#mongo 端口
+#monog 端口
 mongo_port   27017
 
 #mongo 库名称
-mongo_db     test
+mongo_db     sky_mirror
 
 #mongo 表名称
-mongo_table   test
+mongo_table   monitor_data
