--- a/bin/httpd/mossad.conf
+++ b/bin/httpd/mossad.conf
@@ -1,8 +1,8 @@
 ##############################################################
 #  NET CONFIG
 #
-#  host: BindµÄIPµØÖ·,Ä¬ÈÏ,bindËùÓĞÍø¿¨(INADDR_ANY)
-#  port: BindµÄ¶Ë¿ÚºÅ,Ä¬ÈÏ9527
+#  host: Bindçš„IPåœ°å€,é»˜è®¤,bindæ‰€æœ‰ç½‘å¡(INADDR_ANY)
+#  port: Bindçš„ç«¯å£å·,é»˜è®¤9527
 ##############################################################
 #host   127.0.0.1
 port    9527
@@ -10,13 +10,13 @@ port    9527
 ##############################################################
 # LOG CONFIG 
 # 
-# log_name : ÈÕÖ¾Ãû³Æ
-# log_path : ÈÕÖ¾´æ´¢Â·¾¶
-# log_level: ÈÕÖ¾µÈ¼¶,Ä¬ÈÏ4[ÈÕÖ¾µÈ¼¶ÔÚ¸ß²¢·¢ÏÂ£¬¶ÔĞÔÄÜÓ°Ïì½Ï´ó]
+# log_name : æ—¥å¿—åç§°
+# log_path : æ—¥å¿—å­˜å‚¨è·¯å¾„
+# log_level: æ—¥å¿—ç­‰çº§,é»˜è®¤4[æ—¥å¿—ç­‰çº§åœ¨é«˜å¹¶å‘ä¸‹ï¼Œå¯¹æ€§èƒ½å½±å“è¾ƒå¤§]
 #            0,Fatal; 1,Error; 2,Warning; 3,notice; 4,Info; 5,Debug
-# log_size : Ã¿¸öÈÕÖ¾ÎÄ¼şµÄ´óĞ¡,Ä¬ÈÏ1G
-# log_num  : ÈÕÖ¾×Ü¸öÊı,Ä¬ÈÏ10¸ö
-# log_multi: ÊÇ·ñ½«²»Í¬¼¶±ğµÄÈÕÖ¾£¬¶¨Ïòµ½²»Í¬µÄÎÄ¼ş,Ä¬ÈÏoff
+# log_size : æ¯ä¸ªæ—¥å¿—æ–‡ä»¶çš„å¤§å°,é»˜è®¤1G
+# log_num  : æ—¥å¿—æ€»ä¸ªæ•°,é»˜è®¤10ä¸ª
+# log_multi: æ˜¯å¦å°†ä¸åŒçº§åˆ«çš„æ—¥å¿—ï¼Œå®šå‘åˆ°ä¸åŒçš„æ–‡ä»¶,é»˜è®¤off
 ##############################################################
 log_name   mossad.log
 log_path   ./logs/
@@ -28,22 +28,22 @@ log_multi  off
 ##############################################################
 #  PID FILE
 #  
-#  pid_file: pidfileÎÄ¼ş´æ´¢Î»ÖÃ
+#  pid_file: pidfileæ–‡ä»¶å­˜å‚¨ä½ç½®
 ##############################################################
 pid_file   ./pid/mossad.pid
 
 ##############################################################
 #  DAEMON
 #  
-* daemon: Èç¹û³ÌĞòĞèÒªsuperviseÍĞ¹Ü£¬ĞèÒª½«daemon¹Ø±Õ¡£Ä¬ÈÏ¿ªÆô
+* daemon: å¦‚æœç¨‹åºéœ€è¦superviseæ‰˜ç®¡ï¼Œéœ€è¦å°†daemonå…³é—­ã€‚é»˜è®¤å¼€å¯
 ##############################################################
 daemon    on
 
 ##############################################################
 #  THREAD CONFIG
 #  
-#  stack_size£ºÏß³Ì´óĞ¡,Ä¬ÈÏ10M
-#  worker_num: ¹¤×÷Ïß³ÌÊı,Ä¬ÈÏ5¸ö
+#  stack_sizeï¼šçº¿ç¨‹å¤§å°,é»˜è®¤10M
+#  worker_num: å·¥ä½œçº¿ç¨‹æ•°,é»˜è®¤5ä¸ª
 ##############################################################
 stack_size   10485760 
 #worker_num   10       
@@ -52,10 +52,10 @@ worker_num   3
 ##############################################################
 #  CONNECTION CONFIG
 #  
-#  client_limit         :×î´ó·şÎñÁ¬½ÓÊı,Ä¬ÈÏ10Íò
-#  client_timeout       :Á¬½Ó×î´ó³¬Ê±Ê±¼ä(Ãë),Ä¬ÈÏ300Ãë
-#  master_poll_interval :MasterÏß³ÌCronÆµÂÊ(Ãë),Ä¬ÈÏ600Ãë
-#  worker_poll_interval :WorkerÏß³ÌCronÆµÂÊ(Ãë),Ä¬ÈÏ60Ãë
+#  client_limit         :æœ€å¤§æœåŠ¡è¿æ¥æ•°,é»˜è®¤10ä¸‡
+#  client_timeout       :è¿æ¥æœ€å¤§è¶…æ—¶æ—¶é—´(ç§’),é»˜è®¤300ç§’
+#  master_poll_interval :Masterçº¿ç¨‹Croné¢‘ç‡(ç§’),é»˜è®¤600ç§’
+#  worker_poll_interval :Workerçº¿ç¨‹Croné¢‘ç‡(ç§’),é»˜è®¤60ç§’
 ##############################################################
 client_limit     100000
 #client_limit          3 
@@ -66,9 +66,9 @@ worker_poll_interval  60
 ##############################################################
 #  SO CONFIG
 #  
-#  so_file   :so ÎÄ¼şÂ·¾¶
-#  include   :½«²å¼şµÄÅäÖÃÎÄ¼şÒıÈë
-#  pro_name  :°üº¬ÔÚso_fileÖĞ£¬Ö¸¶¨³ÌĞòÃû³Æ
+#  so_file   :so æ–‡ä»¶è·¯å¾„
+#  include   :å°†æ’ä»¶çš„é…ç½®æ–‡ä»¶å¼•å…¥
+#  pro_name  :åŒ…å«åœ¨so_fileä¸­ï¼ŒæŒ‡å®šç¨‹åºåç§°
 ##############################################################
 include  http.conf
 
