--- a/cases/mongo-saver/mongo_saver.conf
+++ b/cases/mongo-saver/mongo_saver.conf
@@ -3,17 +3,17 @@ so_file         ./libmongo_saver.so
 pro_name        Msd_mongo_saver
 
 
-#±í½á¹¹£º_id, hostname, item_id, time, value
+#è¡¨ç»“æ„ï¼š_id, hostname, item_id, time, value
 #
 
-#mongo µØÖ·
+#mongo åœ°å€
 mongo_ip     10.16.26.244
 
-#monog ¶Ë¿Ú
+#monog ç«¯å£
 mongo_port   27017
 
-#mongo ¿âÃû³Æ
+#mongo åº“åç§°
 mongo_db     sky_mirror
 
-#mongo ±íÃû³Æ
+#mongo è¡¨åç§°
 mongo_table   monitor_data
