--- a/cases/passenger/passenger.conf
+++ b/cases/passenger/passenger.conf
@@ -2,7 +2,7 @@
 so_file         ./libpassenger.so
 pro_name        Msd_trans
 
-#back_end´æ»î×´Ì¬Ì½²âÆµÂÊ
+#back_endå­˜æ´»çŠ¶æ€æ¢æµ‹é¢‘ç‡
 back_end_alive_interval 60
 
 # backend list
@@ -17,4 +17,3 @@ backend_list_4    127.0.0.1:5988 #
 #backend_list_8  127.0.0.1:9529;127.0.0.1:9530
 #backend_list_9  127.0.0.1:9529;127.0.0.1:9530
 #backend_list_10 127.0.0.1:9529;127.0.0.1:9530
-
