--- a/cases/redis-saver/redis_saver.conf
+++ b/cases/redis-saver/redis_saver.conf
@@ -3,16 +3,16 @@ so_file         ./libredis_saver.so
 pro_name        Msd_redis_saver
 
 
-#hash½á¹¹£ºhostname:{
+#hashç»“æ„ï¼šhostname:{
 #             item_id => value,
 #             item_id => value
 #          }
 
-#redis µØÖ·
+#redis åœ°å€
 redis_ip     127.0.0.1
 
-#redis ¶Ë¿Ú
+#redis ç«¯å£
 redis_port   6379
 
-#redis ¿âÃû³Æ
+#redis åº“åç§°
 redis_db     0
